[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Tisheel Bashyam <tisheelbashyam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.26"
langchain-community = "^0.3.27"
langchain-core = "^0.3.71"
datetime = "^5.5"
streamlit = "^1.47.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
